[package]
name = "rslive"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
reqwest = { version = "0.13.2", features = [
    "json",
    "rustls",
    "multipart",
    "charset",
    "http2",
    "socks",
], default-features = false }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
webrtc = "0.17.1"
bytes = "1.11.1"
h264-parser = "0.4.1"
opus = "0.3.1"
# bevy = { version = "0.18.1", default-features = false, features = [
#     "bevy_render",
#     "bevy_core_pipeline",
#     "bevy_asset",
#     "bevy_pbr",
# ] }
bevy = { version = "0.18.1", features = ["dynamic_linking"] }
# , features = ["debug"] }
tokio-util = "0.7.18"
chrono = "0.4.44"
crossfire = { version = "3.1.7", features = ["tokio"] }
snafu = { version = "0.9.0", features = ["backtrace", "futures"] }
rustls = "0.23.37"
wgpu = "29.0.0"
snafu-tracing = "0.8.3"
bytemuck = "1.25.0"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
